--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
       DATABASE_URL: postgres://postgres:postgres@db:5432/tasks_db
     ports:
       - "8000:8000"
-    command: uvicorn src.app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/app
+    entrypoint: ["/bin/bash", "/app/entrypoint.sh"]
 
 volumes:
   postgres_data:
