--- a/src/dockerfile
+++ b/src/dockerfile
@@ -16,5 +16,5 @@ COPY . .
 # Устанавливаем переменные окружения
 ENV PYTHONUNBUFFERED=1
 
-# Команда запуска (можно заменить на uvicorn в docker-compose)
+# Команда запуска по умолчанию (не используется, если есть entrypoint)
 CMD ["uvicorn", "src.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
